--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+	<p>Lorem ipsum huign juiov asfjo jgsvnk lkiopty hyuiop asdert jkidvj mkopue azxsqwerfgtt</p>
+	<p>Lorem ipsum is a good thing but not working in this code editor I think accio need to work on it</p>
+	<p>So what be done next i dont know whio am i to tell abouyt it thid is not mu wioh</p>
+	</div>
+	<ul>
+	<li>First Item</li>
+	<li>Second Item</li>
+	<li>Thire Item</li>
+	<li>Fourth Item</li>
+	<li>Fifth Item</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
