--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
+	<article>
 	<p>Lorem ipsum huign juiov asfjo jgsvnk lkiopty hyuiop asdert jkidvj mkopue azxsqwerfgtt</p>
 	<p>Lorem ipsum is a good thing but not working in this code editor I think accio need to work on it</p>
 	<p>So what be done next i dont know whio am i to tell abouyt it thid is not mu wioh</p>
-	</div>
+	</article>
 	<ul>
 	<li>First Item</li>
 	<li>Second Item</li>
